@@ -1,4 +1,4 @@
-README - CUPS v1.5svn - 2011-01-03
+README - CUPS v1.5svn - 2011-05-06
 ----------------------------------
 
 Looking for compile instructions?  Read the file "INSTALL.txt"
